<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/connectedBlueToothDevice"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:stackFromBottom="true"
        android:text="@string/DisplayBlueToothDevice"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ScanPairedDevice"
            android:text="@string/button_connect" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:onClick="SendBMI"
            android:text="@string/button_SendBMI" />
<!-- for multiple connection testing
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="QuerySocket"
            android:text="Button" />
-->
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_DeviceList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:prompt="@string/spinner_PairedDevice"
        android:spinnerMode="dropdown" />

    <ListView
        android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stackFromBottom="true"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/bluetoothChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/send_message" />

    </LinearLayout>

</LinearLayout>